--- a/project2_woori/css/style1.css
+++ b/project2_woori/css/style1.css
@@ -89,27 +89,154 @@ header {
     font-weight: bold;
 }
 
-#login_button span.login_hover>a {
+#login_button .login_hover {
+    position: relative;
+    left: -3px;
+    width: 82px;
+    height: 30px;
+    line-height: 30px;
+    display: block;
+    border: 1px solid #000;
+    border-radius: 5px;
+    background: #fff;
+    margin-top: 8px;
+    padding-left: 2px;
+    box-shadow: 1px 1px 1px 0.5px #939191;
+}
+
+#login_button .login_hover {
     display: none;
+}
+
+#login_button .login_hover>a {
+    float: left;
+    display: block;
+    width: 40px;
+    font-weight: bold;
+    color: rgb(58 141 253);
+}
+
+#login_button :hover .login_hover {
+    display: block;
+}
+
+#login_button .block3 {
+    width: 2px;
+    height: 20px;
+    background: rgb(219, 219, 219);
+    position: relative;
+    top: 5px;
+    left: 39px;
+}
+
+#login_button .login .login_hover>a:hover {
+    color: #fff;
+    background: rgb(58 141 253);
+}
+
+#login_button .login .login_hover>a:first-child:hover {
+    border-radius: 5px 0 0 5px;
+    position: relative;
+    left: -2px;
+}
+
+#login_button .login .login_hover>a:nth-child(2):hover {
+    border-radius: 0 5px 5px 0;
+    position: relative;
+    left: 2px;
+}
+
+#login_button .center .login_hover>a:hover {
+    color: #000;
+    background: #e2e0e0;
+}
+
+#login_button .center .login_hover>a:first-child:hover {
+    border-radius: 5px 0 0 5px;
+    position: relative;
+    left: -2px;
+    width: 40px;
+    padding: 0;
+}
+
+#login_button .center .login_hover>a:nth-child(2):hover {
+    border-radius: 0 5px 5px 0;
+    position: relative;
+    left: 2px;
+    width: 40px;
+}
+
+#login_button .center .login_hover>a {
+    color: #666;
 }
 
 
 /* menu */
 
-#menu>ul>li a {
+#menu {
+    position: relative;
+    margin: 0 auto;
+}
+
+#menu .menu_fl {
     float: left;
+    display: block;
     position: relative;
     top: 20px;
-    left: 185px;
+    left: 167px;
+}
+
+#menu>ul>li h2 a {
     font-size: 20px;
-    font-weight: bold;
     padding-left: 25px;
     font-family: 'PT Sans', sans-serif;
     letter-spacing: -3px;
 }
 
-#menu ul li ul li a {
+#menu .menu_list {
+    width: 150px;
+    position: absolute;
+    border: 1px solid #000;
+    /* border-top: none; */
+    background: #fff;
+    padding: 10px;
+    margin-top: 7px;
+    box-shadow: 4px 3px 3px -2px #939191;
     display: none;
+}
+
+#menu .menu_list li a {
+    display: block;
+    margin: 5px;
+    color: #555;
+    margin-top: -3px;
+}
+
+#menu .menu_list li a:hover {
+    text-decoration: underline;
+    color: #1d65ca;
+}
+
+#menu .menu_list .m_1 a {
+    font-size: 15px;
+    font-weight: bold;
+    border-bottom: 2px solid #666;
+    padding-bottom: 5px;
+    color: #000;
+}
+
+#menu .menu_fl:hover ul {
+    display: block;
+}
+
+#menu .menu_list:after {
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: 36px;
+    border-bottom: 10px solid #fff;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
 }
 
 #all_menu {
@@ -276,8 +403,10 @@ header {
 
 .quick_menu .quick_last a:last-child {
     position: absolute;
+    width: 12px;
+    height: 22px;
     top: 26px;
-    right: -8px;
+    right: 22px;
     background: url(../images/quickright.png) no-repeat;
     text-indent: -9999em;
 }
@@ -417,6 +546,20 @@ header {
     height: 88px;
     background: #e9f2ff;
 }
+
+
+/* .ico_left {
+    background: #5da050;
+    height: 85px;
+    width: 85px;
+}
+
+.ico_left:hover {
+    background: #3a8dfd;
+    height: 80px;
+    width: 80px;
+    border-radius: 50px;
+} */
 
 
 /* service  */
