--- a/project2_woori/css/style1.css
+++ b/project2_woori/css/style1.css
@@ -54,10 +54,35 @@
     .swiper-button-next:after {
         display: none;
     }
+    /* .swiper-pagination */
+    
+    .swiper-pagination {
+        position: relative;
+        top: -80px;
+        width: 980px;
+        margin: 0 auto;
+        display: block;
+    }
+    
+    .swiper-pagination-bullet {
+        width: 8px;
+        height: 8px;
+        display: inline-block;
+        border-radius: 50%;
+        background: #000;
+        opacity: 0.2;
+        margin-right: 10px;
+    }
+    
+    .swiper-pagination-bullet-active {
+        opacity: 1;
+        background: var(--swiper-pagination-color, var(--swiper-theme-color));
+    }
     
     .swiper-img {
         display: block;
         width: 980px;
+        height: 520px;
         margin: 0 auto;
     }
     
@@ -322,7 +347,7 @@
         width: 175px;
         position: absolute;
         display: block;
-        top: 18px;
+        top: 20px;
         right: 6%;
         display: block;
         z-index: 999;
@@ -334,14 +359,79 @@
         margin-right: 12px;
         font-family: 'PT Sans', sans-serif;
         letter-spacing: -2px;
+        float: left;
     }
     
-    #all_menu a:nth-child(2) {
-        letter-spacing: 1px;
-    }
-    
+    #all_menu .all_menuCt a:hover,
     #all_menu a:hover {
         color: #000;
+    }
+    
+    #all_menu .all_menuCt a {
+        font-weight: bold;
+        font-size: 20px;
+        margin-right: 12px;
+        font-family: 'PT Sans', sans-serif;
+        letter-spacing: 0px;
+    }
+    
+    #all_menu .all_menuCt ul {
+        width: 260px;
+        height: 200px;
+        background-color: #fff;
+        padding-top: 10px;
+        padding-left: 20px;
+        position: relative;
+        top: 10px;
+        border: 1px solid rgb(109, 109, 109);
+        box-shadow: 4px 3px 3px -2px #939191;
+        display: none;
+        clear: both;
+    }
+    
+    #all_menu .all_menuCt ul li {
+        overflow: hidden;
+    }
+    
+    #all_menu .all_menuCt:hover .language {
+        display: block;
+    }
+    
+    #all_menu .all_menuCt:hover .arrow {
+        display: block;
+    }
+    
+    #all_menu .all_menuCt .arrow {
+        width: 100%;
+        height: 7px;
+        position: absolute;
+        background: url(../images/arrow.png) center 0 no-repeat;
+        top: 34px;
+        left: 36px;
+        z-index: 2;
+        display: none;
+    }
+    
+    #all_menu .all_menuCt ul li h3 {
+        font-size: 16px;
+        font-weight: bold;
+    }
+    
+    #all_menu .all_menuCt ul li a {
+        font-size: 13px;
+        margin-left: 10px;
+        font-weight: 500;
+        line-height: 24px;
+    }
+    
+    #all_menu .all_menuCt ul li.line {
+        position: relative;
+        left: -9px;
+        width: 249px;
+        height: 2px;
+        background: rgb(92 92 92);
+        padding: 0;
+        margin: 10px auto;
     }
     
     #top_search {
@@ -352,7 +442,7 @@
         position: absolute;
         display: block;
         right: 2%;
-        top: 17px;
+        top: 19px;
         z-index: 999;
         cursor: pointer;
     }
