--- a/project2_woori/css/style1.css
+++ b/project2_woori/css/style1.css
@@ -8,6 +8,29 @@
     
     body {
         font-family: '맑은 고딕', 'Malgun Gothic', '돋움', Dotum, Helvetica, AppleGothic, Sans-serif;
+        min-width: 960px;
+    }
+    /* 스킵 네비게이션 */
+    
+    #skip {
+        position: relative;
+    }
+    
+    #skip a {
+        position: absolute;
+        left: 0px;
+        top: -35px;
+        border: 1px solid #fff;
+        color: #fff;
+        background: #333;
+        line-height: 30px;
+        width: 140px;
+        text-align: center;
+    }
+    
+    #skip a:active,
+    #skip a:focus {
+        top: 0px;
     }
     
     #wrap {
@@ -94,6 +117,12 @@
         top: 0px;
         left: 468px;
         z-index: 999;
+    }
+    
+    #top_menu .container {
+        width: 1400px;
+        height: 66px;
+        margin: 0 auto;
     }
     
     #login_button {
@@ -616,11 +645,20 @@
         width: 100%;
     }
     
-    #mid_cont_menu>#cont_menu .cont_menu_left>a,
+    #mid_cont_menu>#cont_menu .cont_menu_left>a {
+        position: absolute;
+        font-size: 22px;
+        font-weight: bold;
+        left: 0;
+        top: 0;
+    }
+    
     #mid_cont_menu>#cont_menu .cont_menu_right>a {
         position: absolute;
         font-size: 22px;
         font-weight: bold;
+        top: 0;
+        right: 240px;
     }
     
     #mid_cont_menu>#cont_menu .cont_menu_left p>em,
@@ -1345,4 +1383,20 @@
         right: -143px;
         top: 33px;
         margin: 2px;
+    }
+    
+    .go-top {
+        position: fixed;
+        bottom: 48px;
+        right: 48px;
+        text-align: center;
+        color: #555;
+        width: 48px;
+        height: 48px;
+        font-size: 48px;
+        display: none;
+    }
+    
+    .go-top:hover {
+        color: #007aff;
     }
